Fixing the home page

--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
   <title>Dog Explorer</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
-  <h1>og Explorer</h1>
+
+  <h1>Dog Explorer</h1>
   <p>Explore dog breeds and cute dog images using a public API!</p>
 
-  < class="buttons">
+  <body class="buttons">
     <a href="breeds.html">View Dog Breeds</a>
     <a href="images.html">View Dog Images</a>
-  <>
+  </body>
+  
 
 </body>
 </html>
