Fixed the issue

--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
   <title>Dog Explorer</title>
   <link rel="stylesheet" href="style.css">
 </head>
+<body>
 
-
-  <h1>Dog Explorer</h1>
+  <h1>🐶 Dog Explorer</h1>
   <p>Explore dog breeds and cute dog images using a public API!</p>
 
-  <body class="buttons">
+  <div class="buttons">
     <a href="breeds.html">View Dog Breeds</a>
     <a href="images.html">View Dog Images</a>
-  </body>
-  
+  </div>
 
 </body>
 </html>
