Homepage got fixed and working

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-  <h1>🐶 Dog Explorer</h1>
+  <h1>Dog Explorer</h1>
   <p>Explore dog breeds and cute dog images using a public API!</p>
 
   <div class="buttons">
