--- a/breeds.html
+++ b/breeds.html
@@ -6,6 +6,17 @@
 </head>
 <body>
 
-  <h1>🐕 Dog Breeds</h1>
+  <h1>Dog Breeds</h1>
 
- 
+  <nav>
+    <a href="index.html">Home</a> |
+    <a href="images.html">Dog Images</a>
+  </nav>
+
+  <div id="breeds-container">
+    <p>Loading breeds...</p>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
