Fixed the issues

--- a/images.html
+++ b/images.html
@@ -5,18 +5,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <h1>🐶 Random Dog Images</h1>
-
+  <h1>Random Dog Images</h1>
   <nav>
     <a href="index.html">Home</a> |
     <a href="breeds.html">Dog Breeds</a>
   </nav>
-
   <div id="images-container">
     <p>Loading images...</p>
   </div>
-
   <script src="images.js"></script>
 </body>
 </html>
